CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(tests)

FIND_PACKAGE(PkgConfig)

PKG_CHECK_MODULES(GLIB  REQUIRED glib-2.0)

INCLUDE(FindLua)
INCLUDE(FindPkgConfig)

INCLUDE_DIRECTORIES(
   ${GLIB_INCLUDE_DIRS}
   ${LUA_INCLUDE_DIR}
)

ADD_DEFINITIONS(-fPIC)

# Read file
ADD_LIBRARY( luabridge SHARED luabridge.c )

TARGET_LINK_LIBRARIES( luabridge
   async
   ${LUA_LIBRARIES}
   ${GLIB_LIBRARIES}
)

MESSAGE("ICI " ${LUA_LIBRARIES})