CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_DEFINITIONS("-std=c++11")

PROJECT(libasync)

FIND_PACKAGE(PkgConfig)

PKG_CHECK_MODULES(GLIB  REQUIRED glib-2.0)
PKG_CHECK_MODULES(GIO   REQUIRED gio-2.0 )
PKG_CHECK_MODULES(CAIRO REQUIRED cairo   )
PKG_CHECK_MODULES(PANGO REQUIRED pango   )

INCLUDE_DIRECTORIES(${GLIB_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES(${GIO_INCLUDE_DIRS}  )
INCLUDE_DIRECTORIES(${CAIRO_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PANGO_INCLUDE_DIRS})

ADD_DEFINITIONS(${GLIB_CFLAGS} )
ADD_DEFINITIONS(${GIO_CFLAGS}  )
ADD_DEFINITIONS(${CAIRO_CFLAGS})
ADD_DEFINITIONS(${PANGO_CFLAGS})

INCLUDE_DIRECTORIES(..)

SET(libasync_SRCS
   ../async.C
)

ADD_LIBRARY( async SHARED ${libasync_SRCS} )

TARGET_LINK_LIBRARIES( async
   ${GLIB_LIBRARIES}
   ${GIO_LIBRARIES}
   ${CAIRO_LIBRARIES}
   ${PANGO_LIBRARIES}
)